lucky-pull — fixed + finally dark mode

--- a/lucky-pull/style.css
+++ b/lucky-pull/style.css
@@ -13,25 +13,16 @@ body {
     text-align: center;
 }
 button {
-    background-color: var(--fairy);
-    border: solid 5px var(--lavender);
-    border-radius: 15px;
-    border-style: none solid solid none;
-    color: rgb(220, 60, 125);
-    cursor: pointer;
     font-family: 'Comic Sans MS', 'Chalkboard SE';
-    font-size: 36px;
-    height: 100px;
-    width: 250px;
 }
 h1 {
     color: rgb(145, 35, 80);
 }
-h2 {
-    color: rgb(190, 80, 130);
+label {
+    font-size: 14pt;
 }
 p {
-    color: rgb(225, 75, 125);
+    color: white;
 }
 select {
     background-color: var(--fairy);
@@ -40,8 +31,8 @@ select {
     color: var(--magenta);
     cursor: pointer;
     font-family: 'Comic Sans MS', 'Chalkboard SE';
-    font-size: 18px;
-    height: auto;
+    font-size: 14pt;
+    height: 40px;
 	padding: 5px;
     text-align: center;
     max-width: 300px;
@@ -64,10 +55,30 @@ td {
     color: white;
     padding: 5px;
 }
+.pull-button {
+    background-color: var(--fairy);
+    border: solid 5px var(--lavender);
+    border-radius: 15px;
+    border-style: none solid solid none;
+    color: rgb(220, 60, 125);
+    cursor: pointer;
+    font-family: 'Comic Sans MS', 'Chalkboard SE';
+    font-size: 28pt;
+    height: 100px;
+    width: 250px;
+}
+#bottom-container {
+    bottom: 2vh;
+    left: 0;
+    position:
+    fixed;
+    right: 0;
+}
 #continueButton {
     background: rgb(255, 210, 230);
     border-color: rgb(255, 210, 230);
     color: rgb(150, 215, 235);
+    transition: color 1s;
     visibility: hidden;
     width: 100px;
 }
@@ -77,7 +88,7 @@ td {
 	border: 0;
 	border-radius: 0;
     color: rgb(0, 0, 0);
-    font-size: 18px; 
+    font-size: 14pt; 
     height: auto;
 	padding: 4px;
     width: 100%;
@@ -85,11 +96,12 @@ td {
 #submit {
     background-color: var(--magenta);
     border-color: var(--magenta);
-    border-radius: 15px;
+    border-radius: 10px;
+    border-width: 0;
     color: white;
-    font-size: 24px;
-    height: 50px;
-    width: 100px;
+    font-size: 14pt;
+    height: 40px;
+    width: 75px;
 }
 /* appearance NOT BUTTON */
 .darkMode {
@@ -110,3 +122,11 @@ td {
 		background: var(--lavender);
 		color: var(--dark);
 	}
+    .darkMode > label {
+        color: var(--fairy);
+    }
+@media screen and (height < 500px) {
+    #bottom-container {
+        visibility: hidden;
+    }
+}
